--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,20 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
-
-html {
-  @apply font-['poppins'] font-[poppins]
-}
+@import url('https://fonts.googleapis.com/css2?family=Shantell+Sans:wght@700&display=swap');
 
 body {
-  @apply bg-[#f5f5f4]
-}
-
-h1, h2, h3 {
-  @apply font-Poppins font-Poppins
+  @apply bg-[#f5f5f4];
+  
 }
 
 .logo{
-  @apply font-PermanentMarker font-bold
+  font-family: 'Shantell Sans', cursive;
+  font-weight: 700;
 }
